--- a/tex/seq64_midi_formats.tex
+++ b/tex/seq64_midi_formats.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-09-03
-% \update      2016-02-15
+% \update      2016-05-15
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -822,6 +822,7 @@ These are:
 
    If the --bus option is in force, it overrides the buss number (if any)
    stored with the sequence.  This option is useful for testing a setup.
+   Note that it also applies to new sequences.
 
    At the end, \textsl{Sequencer64} adds the sequence to the encoded tune.
 
